@@ -1,9 +1,6 @@
 package com.personalProjects.songTrackerBackend.service;
 
-import com.personalProjects.songTrackerBackend.model.Song;
-import com.personalProjects.songTrackerBackend.model.User;
-import com.personalProjects.songTrackerBackend.model.UserSong;
-import com.personalProjects.songTrackerBackend.model.UserSongDTO;
+import com.personalProjects.songTrackerBackend.model.*;
 import com.personalProjects.songTrackerBackend.model.enums.SongStatus;
 import com.personalProjects.songTrackerBackend.repository.UserSongRepository;
 import org.junit.jupiter.api.Test;
@@ -11,7 +8,9 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.http.HttpStatus;
 import org.springframework.test.context.ActiveProfiles;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
 import java.util.NoSuchElementException;
@@ -83,7 +82,7 @@ class UserSongServiceTest {
 
         assertEquals(1, result.size());
 
-        UserSongDTO dto = result.get(0);
+        UserSongDTO dto = result.getFirst();
 
         assertEquals("Test Song", dto.song().title());
         assertEquals("Test Artist", dto.song().artist());
@@ -125,5 +124,20 @@ class UserSongServiceTest {
         );
 
         verify(userSongRepository, never()).findAllByUserId(anyLong());
+    }
+
+    @Test
+    void updateUserSong_throwsNotFound_whenSongBelongsToAnotherUser() {
+        when(userSongRepository.findByIdAndUserUsername(1L, "attacker"))
+                .thenReturn(Optional.empty());
+
+        ResponseStatusException exception = assertThrows(
+                ResponseStatusException.class,
+                () -> userSongService.updateUserSong(
+                        1L,
+                        new UpdateUserSongRequest(SongStatus.LEARNED, null, null),
+                        "attacker"));
+
+        assertEquals(HttpStatus.NOT_FOUND, exception.getStatusCode());
     }
 }
